Bug 449390 - Middle-clicking konsole tabs repeatedly brings "Tab Properties" dialog instead of closing them
Summary: Middle-clicking konsole tabs repeatedly brings "Tab Properties" dialog instea...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: tabbar (other bugs)
Version First Reported In: 21.08.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-30 22:27 UTC by David
Modified: 2024-12-30 18:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David 2022-01-30 22:27:28 UTC
SUMMARY
If I have many tabs open at the bottom and start middle-clicking them to close them, oftentimes the second or third middle click will instead show the "Tab Properties" dialog.


STEPS TO REPRODUCE
1. Open 5 or more tabs in konsole.
2. Set the last tab as the one on focus.
3. Start **quickly** middle-clicking from where the second tab is.

OBSERVED RESULT
Second tab is closed, but instead of closing more tabs, it triggers the "Tab Properties" dialog.

EXPECTED RESULT
Should keep closing tabs like it does in web browsers.

SOFTWARE/OS VERSIONS
Operating System: Debian GNU/Linux
KDE Plasma Version: 5.23.5
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.2
Kernel Version: 5.15.0-2-amd64 (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 2700 Eight-Core Processor
Memory: 15.6 GiB of RAM
Graphics Processor: AMD VEGA10

ADDITIONAL INFORMATION
Comment 1 Kurt Hindenburg 2024-06-06 23:45:40 UTC
Yea, I can confirm.
Comment 2 Bug Janitor Service 2024-10-21 12:55:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/1040
Comment 3 tcanabrava 2024-12-30 18:19:44 UTC
Git commit c15faa0dd29e334d18064713aa5bd232829bcbdb by Tomaz  Canabrava, on behalf of Tino Lorenz.
Committed on 30/12/2024 at 13:54.
Pushed by tcanabrava into branch 'master'.

Fix opening Tab Properties when spamming middle click

Make the Tab Properties window only show up when double clicking a tab with the left
(rather than any) mouse button.

M  +7    -0    src/widgets/DetachableTabBar.cpp
M  +1    -0    src/widgets/DetachableTabBar.h

https://invent.kde.org/utilities/konsole/-/commit/c15faa0dd29e334d18064713aa5bd232829bcbdb