Fix opening Tab Properties when spamming middle click

Make the Tab Properties window only show up when double clicking a tab with the left
(rather than any) mouse button.

BUG: 449390